# Atlas-MCP

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/governance/: branching-policy.md  commit-convention.md  development-governance.md  pr-approval.md
.github/workflows/: ci.yml
config/: .gitkeep
docs/: configuration.md  deployment.md  usage.md
docs/adr/: ADR-000-template.md  ADR-001-use-python-mcp-sdk.md  ADR-002-uv-package-manager.md  ADR-003-asyncpg-driver.md  ADR-004-embedding-provider-interface.md
docs/architecture/: context.md
docs/phases/: phase-0-planning.md  phase-1-planning.md  phase-2-planning.md  phase-3-planning.md  phase-4-planning.md  phase-5-planning.md
docs/tasks/: P1-D3-planning.md  P1-D4-planning.md  P1-D5-planning.md  P1-D6-planning.md  P1-D7-planning.md  P1-D8-planning.md  P2-D1-planning.md  P2-D2-planning.md  P2-D5-planning.md
scripts/: .gitkeep
src/atlas_mcp/: __init__.py  __main__.py  bootstrap.py  server.py
src/atlas_mcp/config/: __init__.py  logging.py  settings.py
src/atlas_mcp/context/: __init__.py  core.py  decision.py  workflow.py
src/atlas_mcp/governance/: __init__.py  audit.py  service.py
src/atlas_mcp/persistence/: __init__.py  config.py  database.py  migrations.py  vector_codec.py
src/atlas_mcp/protocol/: __init__.py  errors.py  handler.py
src/atlas_mcp/resources/: __init__.py  core_conventions.py  core_stack.py  core_structure.py  decision_adrs.py  governance_audit.py  registry.py  workflow_current.py
src/atlas_mcp/tools/: __init__.py  analyze_bug.py  executor.py  plan_feature.py  register_adr.py  search_context.py
src/atlas_mcp/vectorization/: __init__.py  chunker.py  embeddings.py  indexing.py  store.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_full_pipeline.py  test_indexing_governance.py  test_persistence.py  test_server_smoke.py  test_vectorization.py
tests/unit/: test_analyze_bug.py  test_audit_logger.py  test_bootstrap.py  test_capabilities.py  test_chunker.py  test_core_context.py  test_database.py  test_decision_context.py  test_embeddings.py  test_errors.py  test_executor.py  test_governance_service.py  test_handler.py  test_indexing_service.py  test_init.py  test_logging_setup.py  test_main.py  test_migrations.py  test_persistence_config.py  test_plan_feature.py  test_register_adr.py  test_registry.py  test_server.py  test_settings.py  test_tool_validation.py  test_vector_codec.py  test_vector_store.py  test_workflow_context.py
