[project]
name = "atlas-mcp"
version = "0.1.0"
description = "Production-grade MCP Server for structured context and RAG in software engineering projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "jhow-043"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/jhow-043/Atlas-MCP"
Repository = "https://github.com/jhow-043/Atlas-MCP"
Issues = "https://github.com/jhow-043/Atlas-MCP/issues"
Documentation = "https://github.com/jhow-043/Atlas-MCP/tree/main/docs"

[project.scripts]
atlas-mcp = "atlas_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
local-embeddings = [
    "sentence-transformers>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src/atlas_mcp --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests requiring a running PostgreSQL instance",
]

[tool.coverage.run]
source = ["src/atlas_mcp"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "from __future__ import annotations",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["atlas_mcp"]

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_missing_imports = true
